--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,5 +1,5 @@
 homepage: "https://www.admitad.com",
-documentation: "https://help.admitad.com/advertiser",
+documentation: "https://help.admitad.com/gb/advertiser/topic/pdbab741aa57046d5a9dd23af62bc3734",
 versions:
-  - sha: 9902b8fcdd8eaf9fab3530f8a47afb7c5213bc9f
+  - sha: 0e079d4853b141577b74132d5ab70983e4f25cdc
     changeNotes: Ready-to-launch version (with terms of service and categories)
